add more programs officially supported by unattended

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,79 @@
+local.*bat
 winxpsp*
 ws2k3*
 win2k*
 *updates.bat
+.svn
+7-zip.bat
+adobe-reader.bat
+att.bat
+avg.bat
+base.bat
+capicom.bat
+cdbxp.bat
+chrome.bat
+clamav.bat
+cygwin*
+defrag.bat
+develop.bat
+docxconverter.bat
+dotnet*.bat
+driverpacks.bat
+emacs.bat
+filezilla.bat
+firefox*.bat
+flash.bat
+gimp.bat
+gsview.bat
+ie6.bat
+ie7.bat
+ie8.bat
+ie10.bat
+inkscape.bat
+java.bat
+libreoffice.bat
+msdn.bat
+msrdpcli.bat
+odf-converter.bat
+ofc2003.bat
+office2k.bat
+office2003.bat
+office2007.bat
+officeop.bat
+officexp.bat
+openoffice.bat
+opera.bat
+pdfcreator.bat
+perl.bat
+php5.bat
+php.bat
+powertoy.bat
+putty.bat
+reskit.bat
+sales.bat
+scribus.bat
+shiva.*
+sshd.bat
+shockwave.bat
+spybot.bat
+sun-jre.bat
+support-tools.bat
+symav.bat
+thunderbird*
+tightvnc.bat
+vcredist-x86.bat
+visio*.bat
+vlc.bat
+vs6.*
+vsnet.*
+
+win_malicious-software-removal-tool.bat
+winamp.bat
+winzip.bat
+deu
+enu
+esn
+fra
+nld
+rus
+sve
